deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2023-09-11T16:44:29Z"
  generation: 1
  labels:
    app: kubeproj1
  name: kubeproj1
  namespace: default
  resourceVersion: "889"
  uid: d49a8d3b-1108-42b8-ac8a-884f87ff6875
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kubeproj1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kubeproj1
    spec:
      containers:
      - image: hub.docker.local:5000/python-web-app:v3
        imagePullPolicy: Always
        name: python-web-app
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
              memory: "128Mi"
              cpu: "500m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2023-09-11T16:44:29Z"
    lastUpdateTime: "2023-09-11T16:44:29Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2023-09-11T16:44:29Z"
    lastUpdateTime: "2023-09-11T16:44:29Z"
    message: ReplicaSet "kubeproj1-866ccdd8f5" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
