service.yaml
# service.yaml

apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 5000    
  type: LoadBalancer
