ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: ingress-app

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  rules:

    - host: my-pythonapp.com

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: python-app-service

                port:

                  number: 8084
